fixed navbar issue where it was not sticky due to App  overflow being hidden

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 
 .App {
   text-align: center;
-  overflow-y: hidden;
 }
 
 .header {
